2004-06-21  Per Bothner  <per@bothner.com>

	* kawa/standard/object.java (throwsKeyword):  New constant.
	* kawa/lang/Lambda.java (rewrite):  Do pushPositionOf and
	popPositionOf around each parameter for better error messages.
	(rewriteAttrs):  Handle throws specification.

2004-05-10  Per Bothner  <per@bothner.com>

	* kawa/standard/object.java (scanClassDef, rewriteClassDef):  Improved
	line number setting.
	(scanClassDef):  Error if duplicate init forms.

	* kawa/standard/object.java (scanClassDef):  Remove clinits local.
	(rewriteClassDef):  Remove clinits form returned array.
	(scanClassDef) Don't rewrite init-form: expression yet.
	(rewriteClassDef):  Extra pre-pass to rewrite init-form: forms first.
	Fixes bug #8837.

2004-05-06  Per Bothner  <per@bothner.com>

	* kawa/standard/cxr.java (count):  Replace field by high-order
	16 bits, so that setting mask+count is atomic.

	* kawa/standard/cxr.java (program):  Fix race condition.
	Partly fixes bug #8817.

2004-04-22  Per Bothner  <per@bothner.com>

	* build.xml  (build.selectjava):  Add gnu/lists/FString.java

2004-04-17  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Fix typo.
	Fixes bug #7666.

	* configure.in: Fix help text typo reported by Pete Chown.
	Fixes bug #7851.

2004-03-08  Per Bothner  <per@bothner.com>

	* kawa/standard/define_syntax.java (rewriteForm): Do setProcedureDecl
	and setFuncDef, for the sake of 'defmacro' used in Common Lisp.

	* kawa/standard/define_class.java (rewrite):  Move setSimple call ...
	(scanForDefinitions):  ... to here.
	
	* kawa/standard/load.java (loadSource):  Don't call beginDocument
	or endDocument.

	* build.xml (build.selectjava):  Add gnu/mapping/Symbol.java
	and gnu/text/Char.java.

2004-03-03  Per Bothner  <per@bothner.com>

	* kawa/lang/Macro.java (bind):  Remove method.
	(make):  Call Declaration's setSyntax instead of bind.
	(<init>(Object,Expression)):  Remove constructor.